# whereami

./: .gitignore  .travis.yml  CMakeLists.txt  Cargo.toml  Makefile  README.MD  azure-pipelines.yml  whereami.nimble
.github/workflows/: build.yml  ci.yml  main.yml
src/: constants.nim  download.c  download.h  jsmn.c  jsmn.h  main.c  main.rs  whereami.nim
